--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: ${{ secrets.REMOTE_TARGET }}
-          EXCLUDE: "/.idea/, /node_modules/, /package.json, /package-lock.json"
+          EXCLUDE: "/.idea/, /node_modules/, /.git/, /.github/, /.gitignore, /package.json, /package-lock.json"
           
     - name: Restart bot & check status
       uses: garygrossgarten/github-action-ssh@release
